--- a/infrastructure/elastic-search/docker-compose.yml
+++ b/infrastructure/elastic-search/docker-compose.yml
@@ -20,15 +20,15 @@ services:
       - elasticsearch-data:/usr/share/elasticsearch/data
     ports:
       - 9200:9200
-  kibana:
-    container_name: kibana
-    image: docker.elastic.co/kibana/kibana:7.4.0
-    restart: always
-    environment:
-      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200 # address of elasticsearch docker container which kibana will connect
-    ports:
-      - 5601:5601
-    depends_on:
-      - elasticsearch # kibana will start when elasticsearch has started
+  # kibana:
+  #   container_name: kibana
+  #   image: docker.elastic.co/kibana/kibana:7.4.0
+  #   restart: always
+  #   environment:
+  #     - ELASTICSEARCH_HOSTS=http://elasticsearch:9200 # address of elasticsearch docker container which kibana will connect
+  #   ports:
+  #     - 5601:5601
+  #   depends_on:
+  #     - elasticsearch # kibana will start when elasticsearch has started
 volumes:
   elasticsearch-data:
